<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_button_create_wallet"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/padding_left_title_item_create_wallet"
        android:text="@string/text_infor_event"
        android:textColor="@color/color_text_white"
        android:textSize="@dimen/size_text_normal"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_field_item_create_wallet"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/padding_item_content_paid_wallet"
        android:paddingRight="@dimen/padding_item_content_paid_wallet"
        android:paddingTop="@dimen/padding_item_content_paid_wallet">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type"
            android:textColor="@color/color_text_black"
            android:textSize="@dimen/size_text_normal"/>

        <TextView
            android:id="@+id/txt_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textColor="@color/color_text_black"
            android:textSize="@dimen/size_text_normal"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="@dimen/padding_field_item_create_wallet"
        android:layout_marginRight="@dimen/padding_field_item_create_wallet"
        android:background="@drawable/backgtound_line_dash"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_field_item_create_wallet"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/padding_item_content_paid_wallet"
        android:paddingRight="@dimen/padding_item_content_paid_wallet"
        android:paddingTop="@dimen/padding_item_content_paid_wallet">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/money"
            android:textColor="@color/color_text_black"
            android:textSize="@dimen/size_text_normal"/>

        <TextView
            android:id="@+id/txt_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textColor="@color/color_text_black"
            android:textSize="@dimen/size_text_normal"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="@dimen/padding_field_item_create_wallet"
        android:layout_marginRight="@dimen/padding_field_item_create_wallet"
        android:background="@drawable/backgtound_line_dash"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_field_item_create_wallet"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/padding_item_content_paid_wallet"
        android:paddingRight="@dimen/padding_item_content_paid_wallet"
        android:paddingTop="@dimen/padding_item_content_paid_wallet">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/period"
            android:textColor="@color/color_text_black"
            android:textSize="@dimen/size_text_normal"/>

        <TextView
            android:id="@+id/txt_period"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textColor="@color/color_text_black"
            android:textSize="@dimen/size_text_normal"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="@dimen/padding_field_item_create_wallet"
        android:layout_marginRight="@dimen/padding_field_item_create_wallet"
        android:background="@drawable/backgtound_line_dash"/>

    <TextView
        android:id="@+id/txt_description"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_field_description_item_create_wallet"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:maxLength="100"
        android:hint="@string/no_description"
        android:padding="@dimen/padding_left_title_item_create_wallet"
        android:textColor="@color/color_text_black"
        android:textSize="@dimen/size_text_normal"/>
</LinearLayout>