<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="@dimen/padding_field_item_create_wallet">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_button_create_wallet"
            android:background="@color/colorPrimary"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/padding_left_title_item_create_wallet"
            android:text="@string/text_infor_general"
            android:textColor="@color/color_text_white"
            android:textSize="@dimen/size_text_large"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_field_item_create_wallet"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/padding_item_content_paid_wallet"
            android:paddingRight="@dimen/padding_item_content_paid_wallet"
            android:paddingTop="@dimen/padding_item_content_paid_wallet">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wallet_name"
                android:textColor="@color/color_text_black"
                android:textSize="@dimen/size_text_normal"/>

            <TextView
                android:id="@+id/txt_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:textColor="@color/color_text_black"
                android:textSize="@dimen/size_text_normal"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="@dimen/padding_field_item_create_wallet"
            android:layout_marginRight="@dimen/padding_field_item_create_wallet"
            android:background="@drawable/background_line_dash"
            android:layerType="software"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_field_item_create_wallet"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/padding_item_content_paid_wallet"
            android:paddingRight="@dimen/padding_item_content_paid_wallet"
            android:paddingTop="@dimen/padding_item_content_paid_wallet">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/group"
                android:textColor="@color/color_text_black"
                android:textSize="@dimen/size_text_normal"/>

            <TextView
                android:id="@+id/txt_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:textColor="@color/color_text_black"
                android:textSize="@dimen/size_text_normal"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="@dimen/padding_field_item_create_wallet"
            android:layout_marginRight="@dimen/padding_field_item_create_wallet"
            android:background="@drawable/background_line_dash"
            android:layerType="software"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_field_item_create_wallet"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/padding_item_content_paid_wallet"
            android:paddingRight="@dimen/padding_item_content_paid_wallet"
            android:paddingTop="@dimen/padding_item_content_paid_wallet">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/money_in_wallet"
                android:textColor="@color/color_text_black"
                android:textSize="@dimen/size_text_normal"/>

            <TextView
                android:id="@+id/txt_money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:textColor="@color/color_text_black"
                android:textSize="@dimen/size_text_normal"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="@dimen/padding_field_item_create_wallet"
            android:layout_marginRight="@dimen/padding_field_item_create_wallet"
            android:background="@drawable/background_line_dash"
            android:layerType="software"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_field_item_create_wallet"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/padding_item_content_paid_wallet"
            android:paddingRight="@dimen/padding_item_content_paid_wallet"
            android:paddingTop="@dimen/padding_item_content_paid_wallet">

            <TextView
                android:id="@+id/money_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_create"
                android:textColor="@color/color_text_black"
                android:textSize="@dimen/size_text_normal"/>

            <TextView
                android:id="@+id/txt_date_create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:textColor="@color/color_text_black"
                android:textSize="@dimen/size_text_normal"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="@dimen/padding_field_item_create_wallet"
            android:layout_marginRight="@dimen/padding_field_item_create_wallet"
            android:background="@drawable/background_line_dash"
            android:layerType="software"/>

        <TextView
            android:id="@+id/txt_description"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_field_description_item_create_wallet"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:hint="@string/no_description"
            android:maxLength="100"
            android:padding="@dimen/padding_left_title_item_create_wallet"
            android:textColor="@color/color_text_gray"
            android:textSize="@dimen/size_text_normal"/>
    </LinearLayout>
</android.support.v7.widget.CardView>