<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_button_create_wallet"
        android:background="@color/colorPrimary"
        android:paddingLeft="@dimen/padding_left_title_item_create_wallet"
        android:text="@string/text_infor_general"
        android:textColor="@color/color_text_white"
        android:textSize="@dimen/size_text_normal">

        <TextView
            android:id="@+id/txt_date_create"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:background="?android:selectableItemBackground"
            android:textColor="@color/color_text_white"
            android:clickable="true"
            android:gravity="center"
            android:textSize="@dimen/size_text_normal"/>

        <ImageView
            android:id="@+id/img_remove"
            android:layout_width="@dimen/width_height_icon_remove"
            android:layout_height="@dimen/width_height_icon_remove"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/padding_field_item_create_wallet"
            app:srcCompat="@drawable/ic_remove"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_field_item_create_wallet"
        android:orientation="horizontal"
        android:weightSum="10">

        <RelativeLayout
            android:id="@+id/relative_type"
            android:layout_width="0dp"
            android:layout_height="@dimen/height_field_item_create_wallet"
            android:layout_weight="4.75"
            android:background="@drawable/background_field_input">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/type"
                android:textColor="@color/color_text_black"
                android:textSize="@dimen/size_text_normal"/>

            <ImageView
                android:layout_width="@dimen/width_height_icon_dropdown"
                android:layout_height="@dimen/width_height_icon_dropdown"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/padding_field_item_create_wallet"
                app:srcCompat="@drawable/ic_dropdown"/>
        </RelativeLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"/>

        <RelativeLayout
            android:id="@+id/relative_currency"
            android:layout_width="0dp"
            android:layout_height="@dimen/height_field_item_create_wallet"
            android:layout_weight="4.75"
            android:background="@drawable/background_field_input">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="USD/VND"
                android:textColor="@color/color_text_black"
                android:textSize="@dimen/size_text_normal"/>

            <ImageView
                android:layout_width="@dimen/width_height_icon_dropdown"
                android:layout_height="@dimen/width_height_icon_dropdown"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/padding_field_item_create_wallet"
                app:srcCompat="@drawable/ic_dropdown"/>
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_field_item_create_wallet"
        android:orientation="horizontal"
        android:weightSum="10">

        <TextView
            android:id="@+id/etxt_money_event"
            android:layout_width="0dp"
            android:layout_height="@dimen/height_field_item_create_wallet"
            android:layout_weight="10"
            android:background="@drawable/background_field_input"
            android:gravity="center"
            android:hint="@string/money"
            android:padding="@dimen/padding_field_item_create_wallet"
            android:textColor="@color/color_text_black"
            android:textSize="@dimen/size_text_normal"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_field_description_item_create_wallet"
        android:layout_margin="@dimen/padding_field_item_create_wallet"
        android:background="@drawable/background_field_input"
        android:gravity="center"
        android:hint="@string/note"
        android:padding="@dimen/padding_field_item_create_wallet"
        android:textColor="@color/color_text_black"
        android:textSize="@dimen/size_text_normal"/>
</LinearLayout>